--- a/myapp/templates/contacto.html
+++ b/myapp/templates/contacto.html
@@ -1,11 +1,11 @@
 {% extends "layouts/base.html" %}
 {% load static %}
-
+{% block title %}Contacto{% endblock %}
 {% block content %}
 
 <!-- Backgroup navegacion -->
 <div
-    style="background-image: url('{% static 'img/fondo-contacto.jpg' %}');
+    style="background-image: url('{% static 'img/fondo-contacto.webp' %}');
             position: relative; height: 250px; background-size: cover; background-position: center; background-attachment: fixed; opacity: 0.9; margin-top: -230px; z-index: 1;">
 </div>
 
