--- a/myapp/templates/reseñas.html
+++ b/myapp/templates/reseñas.html
@@ -1,10 +1,10 @@
 {% extends "layouts/base.html" %}
 {% load static %}
-
+{% block title %}Reseñas{% endblock %}
 {% block content %}
 
 <div
-    style="background-image: url('{% static 'img/imagen-reserva.jpg' %}');
+    style="background-image: url('{% static 'img/imagen-reserva.webp' %}');
             position: relative; height: 250px; background-size: cover; background-position: center; background-attachment: fixed; opacity: 0.9; margin-top: -230px; z-index: 1;">
 </div>
 
