--- a/myapp/templates/galeria.html
+++ b/myapp/templates/galeria.html
@@ -1,29 +1,45 @@
-{% extends "layouts/base.html" %}
-{% load static %}
-
+{% extends "layouts/base.html" %} 
+{% load static %} 
+{% block title %}Galeria{% endblock %}
 {% block content %}
-
-
 <div
-    style="background-image: url('{% static 'img/fondo-galeria.jpg' %}'); position: relative; height: 250px; background-size: cover; background-position: 50% 70% ; background-attachment: fixed; opacity: 0.9; margin-top: -230px; z-index: 1;">
+    style="background-image: url('{% static 'img/fondo-galeria.webp' %}'); position: relative; height: 250px; background-size: cover; background-position: 50% 70% ; background-attachment: fixed; opacity: 0.9; margin-top: -230px; z-index: 1;">
 </div>
 
-<div class="container mt-5">
-    <h1 class="text-black text-center">Descubre la Experiencia Visual de Nuestro Restaurante</h1>
-    <p class="lead text-center">Explora nuestra galería de imágenes para sumergirte en nuestro ambiente único y deliciosas
-        creaciones culinarias.</p>
-    <div class="row mt-5">
-        {% for gale in galeria %}
-        <div class="col-md-6 mb-3">
-            <div class="card gallery-card">
-                <img class="card-img-top gallery-img" src="{{ gale.imagen.url }}" alt="{{ gale.nombre }}">
-            </div>
-        </div>
+<div class="container">
+    <h1 class="text-black text-center mt-5">
+      Descubre la Experiencia Visual de Nuestro Restaurante
+    </h1>
+    <p class="lead text-center">
+      Explora nuestra galería de imágenes para sumergirte en nuestro ambiente
+      único y deliciosas creaciones culinarias.
+    </p>
+
+<div id="carouselExampleCaptions" class="carousel slide mx-auto mt-3 mb-5" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        {% for imagen in galeria %}
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="{{ forloop.counter0 }}" {% if forloop.first %}class="active"{% endif %} aria-label="Slide {{ forloop.counter }}">
+            </button>
         {% endfor %}
     </div>
+    <div class="carousel-inner">
+        {% for imagen in galeria %}
+            <div class="carousel-item{% if forloop.first %} active{% endif %}">
+                <img src="{{ imagen.imagen.url }}" class="d-block w-100 rounded" style="max-height: 500px; object-fit: cover;" alt="...">
+            </div>
+        {% endfor %}
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
 </div>
 
 
 
 {% endblock content %}
-
