--- a/myapp/templates/nosotros.html
+++ b/myapp/templates/nosotros.html
@@ -1,17 +1,17 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
-
+{% block title %}Nosotros{% endblock %}
 {% block content %}
 
 <div
-    style="background-image: url('{% static 'img/imagen-nosotros1.jpg' %}'); position: relative; height: 250px; background-size: cover; background-position: 50% 140% ; background-attachment: fixed; opacity: 0.9; margin-top: -230px; z-index: 1;">
+    style="background-image: url('{% static 'img/imagen-nosotros1.webp' %}'); position: relative; height: 250px; background-size: cover; background-position: 50% 140% ; background-attachment: fixed; opacity: 0.9; margin-top: -230px; z-index: 1;">
 </div>
 
 <div class="container mt-5 mb-5">
     <div class="row">
         <div class="col-md-6">
             <div class="card">
-                <img src="{% static 'img/imagen-nosotros2.jpg' %}" alt="Imagen Nosotros"
+                <img src="{% static 'img/imagen-nosotros2.webp' %}" alt="Imagen Nosotros"
                     style="height: 600px;box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);">
             </div>
         </div>
