--- a/myapp/templates/register.html
+++ b/myapp/templates/register.html
@@ -1,11 +1,11 @@
 {% extends "layouts/base.html" %}
 {% load static %}
-
+{% block title %}Registrarse{% endblock %}
 {% block content %}
 
 
 <div
-    style="background-image: url('{% static 'img/imagen-reserva.jpg' %}');
+    style="background-image: url('{% static 'img/imagen-reserva.webp' %}');
             position: relative; height: 250px; background-size: cover; background-position: center; background-attachment: fixed; opacity: 0.9; margin-top: -230px; z-index: 1;">
 </div>
 
@@ -13,7 +13,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card p-4 shadow">
-                <h2 class="text-center mb-4">Registro</h2>
+                <h2 class="text-center mb-4">Registrarse</h2>
                 <form method="POST">
                     {% csrf_token %}
 
@@ -28,7 +28,11 @@
                     {% endif %}
 
                     <!-- Botón de registro -->
-                    <button type="submit" class="btn btn-primary mt-3">Registrarse</button>
+                    <div class="col-12 text-right">
+                        <button type="submit" class="btn btn-primary mt-3">
+                          Registrarse
+                        </button>
+                      </div>
                 </form>
             </div>
         </div>
