Tercera version(confirmacion reserva y olvido contraseña)

--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -37,6 +37,7 @@
           {% endif %}
 
           <div class="col-12 text-right">
+            <a href="{% url 'password_reset' %}" class="btn btn-link mt-3">¿Olvidaste tu contraseña?</a>
             <button type="submit" class="btn btn-primary mt-3">
               Iniciar Sesión
             </button>
