Cuarta version (visualizar reservas y arreglo detalles)

--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -43,6 +43,9 @@
             </button>
           </div>
         </form>
+      </div> 
+      <div>
+        ¿No tenés cuenta aún? <a href="{% url 'register' %}">Crear cuenta</a>.
       </div>
     </div>
   </div>
