--- a/myapp/templates/password_reset_form.html
+++ b/myapp/templates/password_reset_form.html
@@ -1,11 +1,11 @@
 {% extends "layouts/base.html" %}
 {% load static %}
-
 {% block title %}Restablecer Contraseña{% endblock %}
 
 {% block content %}
 
-<div style="
+<div
+  style="
     background-image: url('{% static 'img/imagen-reserva.webp' %}');
     position: relative;
     height: 250px;
@@ -14,10 +14,10 @@
     background-attachment: fixed;
     opacity: 0.9;
     margin-top: -230px;
-    z-index: 1;
-  "></div>
+    z-index: 1;"
+></div>
 
-<div class="container mt-5 mb-5">
+<div class="container mt-5" style="margin-bottom: 160px;">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card p-4 shadow">
@@ -48,5 +48,6 @@
         </div>
     </div>
 </div>
+
 
 {% endblock content %}
