--- a/myapp/templates/password_reset_complete.html
+++ b/myapp/templates/password_reset_complete.html
@@ -17,7 +17,7 @@
     z-index: 1;
   "></div>
 
-<div class="container mt-5 mb-5">
+<div class="container mt-5" style="margin-bottom: 140px;">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card p-4 shadow">
